# ChangeLog for genkernel
# Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
# Distributed under the GPL v2

  24 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> netboot/linuxrc.x:
  Revert to just running /bin/bash on /dev/console for serial. We still
  start getty on tty2-6

  23 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh:
  Allow old 'initramfs' option instead of 'ramdisk' for compatability

  17 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/linuxrc:
  Remove the use of 'env -i' when calling switch_root due to gentoo bug
  #248688

  16 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> netboot/linuxrc.x:
  Run the getty commands with proper arguments so they don't die immediately

  16 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> netboot/linuxrc.x:
  Explicitly set /bin/ashlogin +x during boot

  16 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> netboot/linuxrc.x:
  Run getty for tty1 in the foreground

  16 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> netboot/linuxrc.x,
  +netboot/misc/bin/ashlogin:
  Use getty to launch ash, so that we can use ^C and friends

  16 Dec 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> +BUGS:
  Adding a BUGS file, where we can list bugs that we have found in genkernel
  that need to be resolved.

  16 Dec 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> +HACKING:
  Adding a HACKING file, which I will use to document the various phases of
  genkernel so we can split up the default functions and also so we can
  provide hooks into the various phases for external addons.

  16 Dec 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  arch/alpha/config.sh, arch/arm/config.sh, arch/ia64/config.sh,
  arch/mips/config.sh, arch/parisc/config.sh, arch/parisc64/config.sh,
  arch/ppc/config.sh, arch/ppc64/config.sh, arch/sparc/config.sh,
  arch/sparc64/config.sh, arch/um/config.sh, arch/x86/config.sh,
  arch/x86_64/config.sh, defaults/config.sh, defaults/initrd.defaults,