@@ -116,6 +116,7 @@ determine_real_args() {
 	set_config_with_override 1 GENZIMAGE            CMD_GENZIMAGE
 	set_config_with_override 1 KEYMAP               CMD_KEYMAP               "yes"
 	set_config_with_override 1 DOKEYMAPAUTO         CMD_DOKEYMAPAUTO
+	set_config_with_override 2 BUSYBOX_CONFIG       CMD_BUSYBOX_CONFIG
 
 	BOOTDIR=`arch_replace "${BOOTDIR}"`
 	BOOTDIR=${BOOTDIR%/}    # Remove any trailing slash
